What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

August 15, 2011
* [antonin] fixed a bug in autotools files that prevented libfcgi to be correctly found in some cases (patch from V.Torri).

August 12, 2011
+ [antonin] added cmake support to openjpip

August 11, 2011
* [mickael] Fixed issue #76
* [antonin] minor bug fix in configure.ac (credit to Vincent Torri)
! [mickael] backport rev[824-834] and rev[837-859] into the openjpeg-1.5 branch 

August 9, 2011
- [antonin] removed xcode project files (cmake and autotools are now the only supported build methods)

July 23, 2011
+ [vtorri] Fixed issue #74.
+ [vtorri] Added libpng 1.5 detection. Dropped libpng 1.0.* explicit detection (we are in 2011 !). Patch by Winfried.

July 13, 2011
+ [vtorri] added 'libopenjpeg-jpwl.pc.in'
* [vtorri] fixed substitution in libopenjpeg1.pc.in
! [vtorri] increase micro version to 99. When released, set minor to 5 and micro to 0
* [vtorri] added -lm to the linker for libopenjpeg and to the .pc file
- [vtorri] removed useless LCMS flags from Makefile.am for libopenjpeg

_______ R812 : 'openjpeg-1.5' branch created ______________________________


July 10, 2011
! [antonin] improved encoding speed in t1_encode_cblks (credit to Giuseppe Baruffa)

July 3, 2011
* [antonin] fixed bmptoimage (see http://groups.google.com/group/openjpeg/browse_thread/thread/33a24c5896bf6391)
* [antonin] fixed handling of "jp2->meth" value (Restricted ICC profile handling currently not implemented)

June 30, 2011
! [antonin] fixed CTest configuration files

June 3, 2011
+ [malaterre] adding partno and numpart info as part of the warning message (issue #69)
+ [malaterre] make sure that cmake build system works on debian

May 23, 2011
* [antonin] fixed a bug in autotools that prevented "make distcheck" to work properly (credit to Vincent Torri)
+ [antonin] added autotools as a build method for jpip (credit to Vincent Torri)