@@ -10,7 +10,7 @@ FIND_PACKAGE_HANDLE_STANDARD_ARGS(FCGI DEFAULT_MSG FCGI_LIBRARY FCGI_INCLUDE_DIR
 
 # Copy the results to the output variables.
 IF(FCGI_FOUND)
-	SET( ${FCGI_LIBRARY})
+	SET(FCGI_LIBRARIES ${FCGI_LIBRARY})
 	SET(FCGI_INCLUDE_DIRS ${FCGI_INCLUDE_DIR})
 ELSE(FCGI_FOUND)
 	SET(FCGI_LIBRARIES)
